--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,18 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext {
-        kotlin_version = '1.3.72'
+        kotlin_version = '1.6.0'
     }
     repositories {
-        google()
         jcenter()
+        google()
+        mavenCentral()
+        maven { url 'https://jitpack.io' }
+        maven { url 'https://maven.aliyun.com/repository/public' }
+        maven { url 'http://central.maven.org/maven2/' }
+        maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }
     }
+
     dependencies {
         classpath "com.android.tools.build:gradle:4.1.0"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
@@ -16,10 +22,16 @@ buildscript {
     }
 }
 
+
 allprojects {
     repositories {
-        google()
         jcenter()
+        google()
+        mavenCentral()
+        maven { url 'https://jitpack.io' }
+        maven { url 'https://maven.aliyun.com/repository/public' }
+        maven { url 'http://central.maven.org/maven2/' }
+        maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }
     }
 }
 
