--- a/build.gradle
+++ b/build.gradle
@@ -2,24 +2,24 @@
 buildscript {
     ext {
         kotlin_version = '1.6.0'
+        ext.hiltVersion = "2.36"
     }
     repositories {
         jcenter()
         google()
         mavenCentral()
         maven { url 'https://jitpack.io' }
-        maven { url 'https://maven.aliyun.com/repository/public' }
-        maven { url 'http://central.maven.org/maven2/' }
-        maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }
     }
 
     dependencies {
         classpath "com.android.tools.build:gradle:4.1.0"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hiltVersion"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
+
 }
 
 
@@ -29,9 +29,6 @@ allprojects {
         google()
         mavenCentral()
         maven { url 'https://jitpack.io' }
-        maven { url 'https://maven.aliyun.com/repository/public' }
-        maven { url 'http://central.maven.org/maven2/' }
-        maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }
     }
 }
 
